--- a/GameStore.Web/Views/Home/Index.cshtml
+++ b/GameStore.Web/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
-﻿@{
+﻿@using GameStore.Domain.Entities
+@model IEnumerable<Game>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@foreach (var p in @Model)
+{
+    <div>
+        <h3>@p.Name</h3>
+        <p>@p.Description</p>
+        <h4>@p.Price.ToString("# руб")</h4>
+    </div>
+}
