Make a small change

--- a/GameStore.Web/Views/Home/Index.cshtml
+++ b/GameStore.Web/Views/Home/Index.cshtml
@@ -15,5 +15,5 @@
 }
 
 <div>
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("Index", "Home", new {page = x}))
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("Index", new {page = x}))
 </div>
